--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,88 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  width: 100%;
+  height: 120px;
+  background-color: slateblue;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+
+}
+
+
+.navbar .links {
+  margin-right: 50px;
+  text-align: center;
+}
+
+.links a {
+  text-decoration: none;
+  color: white;
+  border-bottom: 3px solid white;
+  padding-bottom: 2px;
+  margin: 10px;
+}
+.user {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-right: 10px;
+  flex-direction: column;
+}
+.user p {
   color: white;
+  margin-right: 10px;
+  font-size: 15px;
+}
+.user img {
+  font-size: 15px;
+  border-radius: 50%;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.createForm {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+form {
+   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 30px 20px;
+  width: 320px;
+  background-color: rgba(43, 0, 255, 0.588);
+  margin-top: 50px;
+  border-radius: 7px;
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input, textarea {
+  padding: 8px 10px;
+  margin: 3px 8px 20px 8px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  font-size: 15px;
 }
+
+.submit:hover {
+  cursor: pointer;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
